parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars funs MAIN LPAREN RPAREN completar_cuad_main bloque
Rule 2     programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars MAIN LPAREN RPAREN completar_cuad_main bloque
Rule 3     inicio_programa -> ID
Rule 4     vars -> VAR vars2
Rule 5     vars -> empty
Rule 6     vars2 -> tipo id_var SEMICOLON agregar_variable vars2
Rule 7     vars2 -> tipo id_var SEMICOLON agregar_variable
Rule 8     id_var -> ID agregar_lstvar COMA id_var
Rule 9     id_var -> ID agregar_lstvar
Rule 10    tipo -> NOM_INT
Rule 11    tipo -> NOM_FLOAT
Rule 12    tipo -> NOM_CHAR
Rule 13    tipo_func -> VOID
Rule 14    tipo_func -> NOM_INT
Rule 15    tipo_func -> NOM_FLOAT
Rule 16    tipo_func -> NOM_CHAR
Rule 17    funs -> FUNC tipo_func funs2
Rule 18    funs2 -> MODULE ID agregar_funs LPAREN parametros RPAREN vars bloque finalizar_funs
Rule 19    funs2 -> MODULE ID agregar_funs LPAREN parametros RPAREN vars bloque finalizar_funs funs
Rule 20    parametros -> tipo ID agregar_param COMA parametros
Rule 21    parametros -> tipo ID agregar_param
Rule 22    parametros -> empty
Rule 23    bloque -> LBRACKET bloque1 RBRACKET
Rule 24    bloque -> LBRACKET RBRACKET
Rule 25    bloque1 -> estatuto bloque1
Rule 26    bloque1 -> empty
Rule 27    estatuto -> asignacion
Rule 28    estatuto -> modulo_v
Rule 29    estatuto -> return
Rule 30    estatuto -> lectura
Rule 31    estatuto -> escritura
Rule 32    estatuto -> desicion
Rule 33    estatuto -> repeticion
Rule 34    estatuto -> func_esp
Rule 35    asignacion -> exp_var EQUALS agregar_exp_op expresion SEMICOLON agregar_cuad_asign
Rule 36    modulo_v -> ID agregar_cuad_era LPAREN e RPAREN fin_func SEMICOLON
Rule 37    modulo_v -> ID agregar_cuad_era LPAREN RPAREN fin_func SEMICOLON
Rule 38    return -> RETURN LPAREN exp RPAREN SEMICOLON
Rule 39    lectura -> READ LPAREN exp_var agregar_cuad_read lectura2
Rule 40    lectura2 -> COMA exp_var agregar_cuad_read lectura2
Rule 41    lectura2 -> RPAREN SEMICOLON
Rule 42    func_esp -> func_esp_name_param LPAREN exp RPAREN agregar_cuad_esp_param_func SEMICOLON
Rule 43    func_esp -> func_esp_name_no_param LPAREN RPAREN agregar_cuad_esp_no_param_func SEMICOLON
Rule 44    func_esp -> COLOR agregar_esp_func LPAREN exp COMA exp COMA exp RPAREN agregar_cuad_esp_param_func SEMICOLON
Rule 45    e -> exp agregar_param_check COMA e
Rule 46    e -> exp agregar_param_check
Rule 47    func_esp_name_param -> LINE agregar_esp_func
Rule 48    func_esp_name_param -> POINT agregar_esp_func
Rule 49    func_esp_name_param -> CIRCLE agregar_esp_func
Rule 50    func_esp_name_param -> ARCUP agregar_esp_func
Rule 51    func_esp_name_param -> ARCDOWN agregar_esp_func
Rule 52    func_esp_name_param -> SETX agregar_esp_func
Rule 53    func_esp_name_param -> SETY agregar_esp_func
Rule 54    func_esp_name_param -> RIGHT agregar_esp_func
Rule 55    func_esp_name_param -> LEFT agregar_esp_func
Rule 56    func_esp_name_param -> PENSIZE agregar_esp_func
Rule 57    func_esp_name_no_param -> PENUP agregar_esp_func
Rule 58    func_esp_name_no_param -> PENDOWN agregar_esp_func
Rule 59    func_esp_name_no_param -> CLEAR agregar_esp_func
Rule 60    escritura -> WRITE LPAREN escritura2 RPAREN SEMICOLON
Rule 61    escritura2 -> expresion agregar_cuad_print_exp COMA escritura2
Rule 62    escritura2 -> STRING agregar_cuad_print_str COMA escritura2
Rule 63    escritura2 -> expresion agregar_cuad_print_exp
Rule 64    escritura2 -> STRING agregar_cuad_print_str
Rule 65    desicion -> IF LPAREN expresion RPAREN agregar_cuad_if THEN bloque
Rule 66    desicion -> IF LPAREN expresion RPAREN agregar_cuad_if THEN bloque else
Rule 67    else -> ELSE agregar_cuad_else bloque
Rule 68    var_cte -> INT
Rule 69    var_cte -> FLOAT
Rule 70    var_cte -> CHAR
Rule 71    repeticion -> condicional
Rule 72    repeticion -> no_condicional
Rule 73    condicional -> WHILE agregar_while LPAREN expresion RPAREN agregar_while_cond DO bloque
Rule 74    no_condicional -> FOR ID agregar_for_var EQUALS exp igualar_for_var TO exp agregar_for_cond DO bloque
Rule 75    expresion -> exp_comp agregar_cuad_log exp_log
Rule 76    exp_log -> AND agregar_exp_op expresion
Rule 77    exp_log -> OR agregar_exp_op expresion
Rule 78    exp_log -> empty
Rule 79    exp_comp -> exp agregar_cuad_comp
Rule 80    exp_comp -> exp agregar_cuad_comp MRTHAN agregar_exp_op exp_comp
Rule 81    exp_comp -> exp agregar_cuad_comp LSTHAN agregar_exp_op exp_comp
Rule 82    exp_comp -> exp agregar_cuad_comp LSETHAN agregar_exp_op exp_comp
Rule 83    exp_comp -> exp agregar_cuad_comp MRETHAN agregar_exp_op exp_comp
Rule 84    exp_comp -> exp agregar_cuad_comp DOUBLE agregar_exp_op exp_comp
Rule 85    exp_comp -> exp agregar_cuad_comp NOT_EQUALS agregar_exp_op exp_comp
Rule 86    exp -> termino agregar_cuad_arith
Rule 87    exp -> termino agregar_cuad_arith PLUS agregar_exp_op exp
Rule 88    exp -> termino agregar_cuad_arith MINUS agregar_exp_op exp
Rule 89    termino -> factor agregar_cuad_factor
Rule 90    termino -> factor agregar_cuad_factor TIMES agregar_exp_op termino
Rule 91    termino -> factor agregar_cuad_factor DIVIDE agregar_exp_op termino
Rule 92    factor -> factor_paren
Rule 93    factor -> PLUS var_cte
Rule 94    factor -> MINUS var_cte
Rule 95    factor -> return_func
Rule 96    factor -> var_cte
Rule 97    factor -> exp_var
Rule 98    factor_paren -> LPAREN agregar_exp_op expresion RPAREN
Rule 99    return_func -> ID agregar_cuad_era LPAREN e RPAREN fin_func
Rule 100   return_func -> ID agregar_cuad_era LPAREN RPAREN fin_func
Rule 101   exp_var -> ID
Rule 102   empty -> <empty>
Rule 103   agregar_funs -> empty
Rule 104   agregar_param -> empty
Rule 105   agregar_exp_op -> empty
Rule 106   agregar_lstvar -> empty
Rule 107   agregar_variable -> empty
Rule 108   agregar_cuad_main -> empty
Rule 109   completar_cuad_main -> empty
Rule 110   agregar_cuad_log -> empty
Rule 111   agregar_cuad_comp -> empty
Rule 112   agregar_cuad_arith -> empty
Rule 113   agregar_cuad_factor -> empty
Rule 114   agregar_cuad_asign -> empty
Rule 115   agregar_cuad_read -> empty
Rule 116   agregar_cuad_print_str -> empty
Rule 117   agregar_cuad_print_exp -> empty
Rule 118   agregar_cuad_if -> empty
Rule 119   agregar_cuad_else -> empty
Rule 120   agregar_for_var -> empty
Rule 121   igualar_for_var -> empty
Rule 122   agregar_for_cond -> empty
Rule 123   agregar_while -> empty
Rule 124   agregar_while_cond -> empty
Rule 125   finalizar_funs -> empty
Rule 126   agregar_cuad_era -> empty
Rule 127   agregar_param_check -> empty
Rule 128   fin_func -> empty
Rule 129   agregar_esp_func -> empty
Rule 130   agregar_cuad_esp_param_func -> empty
Rule 131   agregar_cuad_esp_no_param_func -> empty

Terminals, with rules where they appear

AND                  : 76
ARCDOWN              : 51
ARCUP                : 50
CHAR                 : 70
CIRCLE               : 49
CLEAR                : 59
COLOR                : 44
COMA                 : 8 20 40 44 44 45 61 62
DIVIDE               : 91
DO                   : 73 74
DOUBLE               : 84
ELSE                 : 67
EQUALS               : 35 74
FLOAT                : 69
FOR                  : 74
FUNC                 : 17
ID                   : 3 8 9 18 19 20 21 36 37 74 99 100 101
IF                   : 65 66
INT                  : 68
LBRACKET             : 23 24
LEFT                 : 55
LINE                 : 47
LPAREN               : 1 2 18 19 36 37 38 39 42 43 44 60 65 66 73 98 99 100
LSETHAN              : 82
LSTHAN               : 81
MAIN                 : 1 2
MINUS                : 88 94
MODULE               : 18 19
MRETHAN              : 83
MRTHAN               : 80
NOM_CHAR             : 12 16
NOM_FLOAT            : 11 15
NOM_INT              : 10 14
NOT_EQUALS           : 85
OR                   : 77
PENDOWN              : 58
PENSIZE              : 56
PENUP                : 57
PLUS                 : 87 93
POINT                : 48
PROGRAM              : 1 2
RBRACKET             : 23 24
READ                 : 39
RETURN               : 38
RIGHT                : 54
RPAREN               : 1 2 18 19 36 37 38 41 42 43 44 60 65 66 73 98 99 100
SEMICOLON            : 1 2 6 7 35 36 37 38 41 42 43 44 60
SETX                 : 52
SETY                 : 53
STRING               : 62 64
THEN                 : 65 66
TIMES                : 90
TO                   : 74
VAR                  : 4
VOID                 : 13
WHILE                : 73
WRITE                : 60
error                : 

Nonterminals, with rules where they appear

agregar_cuad_arith   : 86 87 88
agregar_cuad_asign   : 35
agregar_cuad_comp    : 79 80 81 82 83 84 85
agregar_cuad_else    : 67
agregar_cuad_era     : 36 37 99 100
agregar_cuad_esp_no_param_func : 43
agregar_cuad_esp_param_func : 42 44
agregar_cuad_factor  : 89 90 91
agregar_cuad_if      : 65 66
agregar_cuad_log     : 75
agregar_cuad_main    : 1 2
agregar_cuad_print_exp : 61 63
agregar_cuad_print_str : 62 64
agregar_cuad_read    : 39 40
agregar_esp_func     : 44 47 48 49 50 51 52 53 54 55 56 57 58 59
agregar_exp_op       : 35 76 77 80 81 82 83 84 85 87 88 90 91 98
agregar_for_cond     : 74
agregar_for_var      : 74
agregar_funs         : 18 19
agregar_lstvar       : 8 9
agregar_param        : 20 21
agregar_param_check  : 45 46
agregar_variable     : 6 7
agregar_while        : 73
agregar_while_cond   : 73
asignacion           : 27
bloque               : 1 2 18 19 65 66 67 73 74
bloque1              : 23 25
completar_cuad_main  : 1 2
condicional          : 71
desicion             : 32
e                    : 36 45 99
else                 : 66
empty                : 5 22 26 78 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131
escritura            : 31
escritura2           : 60 61 62
estatuto             : 25
exp                  : 38 42 44 44 44 45 46 74 74 79 80 81 82 83 84 85 87 88
exp_comp             : 75 80 81 82 83 84 85
exp_log              : 75
exp_var              : 35 39 40 97
expresion            : 35 61 63 65 66 73 76 77 98
factor               : 89 90 91
factor_paren         : 92
fin_func             : 36 37 99 100
finalizar_funs       : 18 19
func_esp             : 34
func_esp_name_no_param : 43
func_esp_name_param  : 42
funs                 : 1 19
funs2                : 17
id_var               : 6 7 8
igualar_for_var      : 74
inicio_programa      : 1 2
lectura              : 30
lectura2             : 39 40
modulo_v             : 28
no_condicional       : 72
parametros           : 18 19 20
programa             : 0
repeticion           : 33
return               : 29
return_func          : 95
termino              : 86 87 88 90 91
tipo                 : 6 7 20 21
tipo_func            : 17
var_cte              : 93 94 96
vars                 : 1 2 18 19
vars2                : 4 6

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars funs MAIN LPAREN RPAREN completar_cuad_main bloque
    (2) programa -> . PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars MAIN LPAREN RPAREN completar_cuad_main bloque

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . inicio_programa agregar_cuad_main SEMICOLON vars funs MAIN LPAREN RPAREN completar_cuad_main bloque
    (2) programa -> PROGRAM . inicio_programa agregar_cuad_main SEMICOLON vars MAIN LPAREN RPAREN completar_cuad_main bloque
    (3) inicio_programa -> . ID

    ID              shift and go to state 4

    inicio_programa                shift and go to state 3

state 3

    (1) programa -> PROGRAM inicio_programa . agregar_cuad_main SEMICOLON vars funs MAIN LPAREN RPAREN completar_cuad_main bloque
    (2) programa -> PROGRAM inicio_programa . agregar_cuad_main SEMICOLON vars MAIN LPAREN RPAREN completar_cuad_main bloque
    (108) agregar_cuad_main -> . empty
    (102) empty -> .

    SEMICOLON       reduce using rule 102 (empty -> .)

    agregar_cuad_main              shift and go to state 5
    empty                          shift and go to state 6

state 4

    (3) inicio_programa -> ID .

    SEMICOLON       reduce using rule 3 (inicio_programa -> ID .)


state 5

    (1) programa -> PROGRAM inicio_programa agregar_cuad_main . SEMICOLON vars funs MAIN LPAREN RPAREN completar_cuad_main bloque
    (2) programa -> PROGRAM inicio_programa agregar_cuad_main . SEMICOLON vars MAIN LPAREN RPAREN completar_cuad_main bloque

    SEMICOLON       shift and go to state 7


state 6

    (108) agregar_cuad_main -> empty .

    SEMICOLON       reduce using rule 108 (agregar_cuad_main -> empty .)


state 7

    (1) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON . vars funs MAIN LPAREN RPAREN completar_cuad_main bloque
    (2) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON . vars MAIN LPAREN RPAREN completar_cuad_main bloque
    (4) vars -> . VAR vars2
    (5) vars -> . empty
    (102) empty -> .

    VAR             shift and go to state 9
    MAIN            reduce using rule 102 (empty -> .)
    FUNC            reduce using rule 102 (empty -> .)

    vars                           shift and go to state 8
    empty                          shift and go to state 10

state 8

    (1) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars . funs MAIN LPAREN RPAREN completar_cuad_main bloque
    (2) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars . MAIN LPAREN RPAREN completar_cuad_main bloque
    (17) funs -> . FUNC tipo_func funs2

    MAIN            shift and go to state 12
    FUNC            shift and go to state 13

    funs                           shift and go to state 11

state 9

    (4) vars -> VAR . vars2
    (6) vars2 -> . tipo id_var SEMICOLON agregar_variable vars2
    (7) vars2 -> . tipo id_var SEMICOLON agregar_variable
    (10) tipo -> . NOM_INT
    (11) tipo -> . NOM_FLOAT
    (12) tipo -> . NOM_CHAR

    NOM_INT         shift and go to state 16
    NOM_FLOAT       shift and go to state 17
    NOM_CHAR        shift and go to state 18

    vars2                          shift and go to state 14
    tipo                           shift and go to state 15

state 10

    (5) vars -> empty .

    MAIN            reduce using rule 5 (vars -> empty .)
    FUNC            reduce using rule 5 (vars -> empty .)
    LBRACKET        reduce using rule 5 (vars -> empty .)


state 11

    (1) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars funs . MAIN LPAREN RPAREN completar_cuad_main bloque

    MAIN            shift and go to state 19


state 12

    (2) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars MAIN . LPAREN RPAREN completar_cuad_main bloque

    LPAREN          shift and go to state 20


state 13

    (17) funs -> FUNC . tipo_func funs2
    (13) tipo_func -> . VOID
    (14) tipo_func -> . NOM_INT
    (15) tipo_func -> . NOM_FLOAT
    (16) tipo_func -> . NOM_CHAR

    VOID            shift and go to state 22
    NOM_INT         shift and go to state 23
    NOM_FLOAT       shift and go to state 24
    NOM_CHAR        shift and go to state 25

    tipo_func                      shift and go to state 21

state 14

    (4) vars -> VAR vars2 .

    MAIN            reduce using rule 4 (vars -> VAR vars2 .)
    FUNC            reduce using rule 4 (vars -> VAR vars2 .)
    LBRACKET        reduce using rule 4 (vars -> VAR vars2 .)


state 15

    (6) vars2 -> tipo . id_var SEMICOLON agregar_variable vars2
    (7) vars2 -> tipo . id_var SEMICOLON agregar_variable
    (8) id_var -> . ID agregar_lstvar COMA id_var
    (9) id_var -> . ID agregar_lstvar

    ID              shift and go to state 27

    id_var                         shift and go to state 26

state 16

    (10) tipo -> NOM_INT .

    ID              reduce using rule 10 (tipo -> NOM_INT .)


state 17

    (11) tipo -> NOM_FLOAT .

    ID              reduce using rule 11 (tipo -> NOM_FLOAT .)


state 18

    (12) tipo -> NOM_CHAR .

    ID              reduce using rule 12 (tipo -> NOM_CHAR .)


state 19

    (1) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars funs MAIN . LPAREN RPAREN completar_cuad_main bloque

    LPAREN          shift and go to state 28


state 20

    (2) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars MAIN LPAREN . RPAREN completar_cuad_main bloque

    RPAREN          shift and go to state 29


state 21

    (17) funs -> FUNC tipo_func . funs2
    (18) funs2 -> . MODULE ID agregar_funs LPAREN parametros RPAREN vars bloque finalizar_funs
    (19) funs2 -> . MODULE ID agregar_funs LPAREN parametros RPAREN vars bloque finalizar_funs funs

    MODULE          shift and go to state 31

    funs2                          shift and go to state 30

state 22

    (13) tipo_func -> VOID .

    MODULE          reduce using rule 13 (tipo_func -> VOID .)


state 23

    (14) tipo_func -> NOM_INT .

    MODULE          reduce using rule 14 (tipo_func -> NOM_INT .)


state 24

    (15) tipo_func -> NOM_FLOAT .

    MODULE          reduce using rule 15 (tipo_func -> NOM_FLOAT .)


state 25

    (16) tipo_func -> NOM_CHAR .

    MODULE          reduce using rule 16 (tipo_func -> NOM_CHAR .)


state 26

    (6) vars2 -> tipo id_var . SEMICOLON agregar_variable vars2
    (7) vars2 -> tipo id_var . SEMICOLON agregar_variable

    SEMICOLON       shift and go to state 32


state 27

    (8) id_var -> ID . agregar_lstvar COMA id_var
    (9) id_var -> ID . agregar_lstvar
    (106) agregar_lstvar -> . empty
    (102) empty -> .

    COMA            reduce using rule 102 (empty -> .)
    SEMICOLON       reduce using rule 102 (empty -> .)

    agregar_lstvar                 shift and go to state 33
    empty                          shift and go to state 34

state 28

    (1) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars funs MAIN LPAREN . RPAREN completar_cuad_main bloque

    RPAREN          shift and go to state 35


state 29

    (2) programa -> PROGRAM inicio_programa agregar_cuad_main SEMICOLON vars MAIN LPAREN RPAREN . completar_cuad_main bloque
    (109) completar_cuad_main -> . empty
    (102) empty -> .

    LBRACKET        reduce using rule 102 (empty -> .)

    completar_cuad_main            shift and go to state 36
    empty                          shift and go to state 37

state 30

    (17) funs -> FUNC tipo_func funs2 .

    MAIN            reduce using rule 17 (funs -> FUNC tipo_func funs2 .)

